# kolping-study-cockpit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Feldlisten.md  README.md  SECURITY.md  STUDIUM_UEBERSICHT.md  architecture_overview_unified.md  example.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md  copilot-setup.yml
.github/workflows/: android-build.yml  ci.yml  scaffold-website-mapping-mvp.yml
config/: README.md  SECRETS.md
docs/: EXAMS_COMMAND.md  README.md  output.md  request.json  response.json
graphql/: README.md
kmp/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PR5_FINAL_SUMMARY.md  PR5_IMPLEMENTATION_SUMMARY.md  PYTHON_TO_KOTLIN_MAPPING.md  QUICKSTART.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
kmp/androidApp/: build.gradle.kts
kmp/androidApp/schemas/de.kolping.cockpit.android.database.KolpingDatabase/: 1.json
kmp/androidApp/src/main/: AndroidManifest.xml
kmp/androidApp/src/main/java/de/kolping/cockpit/android/: KolpingCockpitApp.kt  MainActivity.kt
kmp/androidApp/src/main/res/mipmap-mdpi/: ic_launcher_round.xml
kmp/androidApp/src/main/res/values/: strings.xml  themes.xml
kmp/gradle/: libs.versions.toml
kmp/mapping/android/: build.gradle.kts
kmp/mapping/core/: build.gradle.kts
kmp/recorder/app/: build.gradle.kts
kmp/recorder/app/src/main/: AndroidManifest.xml
kmp/recorder/app/src/main/res/values/: strings.xml
kmp/shared/: build.gradle.kts
kmp/shared/src/commonMain/kotlin/de/kolping/cockpit/api/: GraphQLClient.kt  MoodleAjaxClient.kt  MoodleClient.kt
scaffold/: scaffold_bundle.yml
scripts/: README.md  apply_bundle.py  check_secrets.py  introspect_api.py
src/kolping_cockpit/: __init__.py  auth.py  cli.py  connector.py  diagnostics.py  graphql_client.py  moodle_client.py  settings.py
tests/: __init__.py  conftest.py  test_cli.py  test_connector.py
(+65 files in other folders)
